project-1/assets/css/styles.css
/*GENERAL*/

html {
  font-family: 'Montserrat';
}


/*NAVBAR*/

#logo {
  height: 50px;
  padding: 10px 20px;
}

#nav-top li a {
  font-weight: 600;
  color: #fdd835;
}

#nav-mobile li {
  font-weight: 600;
}

#navbar {
    padding-right: 20px;
}

#navbar ul .small-link {
  color: #757575;
}

#mobile-nav {
  padding-top: 30px;
}

#mobile-nav li .selected {
  background-color: #f5f5f5;
}


/*MAIN*/

main {
  padding-top: 20px;
}

.no-card {
  margin-top: 150px;
}

#map {
  margin-bottom: 20px;
  height: 200px;
	width: 100%;
}

#steps-header {
  margin-top: 60px;
}

#steps div {;
  margin-bottom: 20px;
  padding: 0 80px;
}

#userLocation {
	height:50px;
	width: 50px;
}

/*MODALS*/

#modals {
  color: #4e342e;
}

#submit {
  font-weight: 800;
}

#call {
  font-weight: 800;
}

#send {
  font-weight: 800;
}


/*STICKY FOOTER*/

body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

main {
  flex: 1 0 auto;
}

/*RESPONSIVE DESIGN*/

@media screen and (min-width: 601px) {
  #steps div {
    padding: 20px;
  }
}

